- fixed stream closing - started vpn service
